# site

./: Cargo.toml
lib/termx/: Cargo.toml
lib/termx/src/: errors.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs
lib/termx/src/registries/: mod.rs
src/: lib.rs
src/app/: mod.rs
src/handlers/: mod.rs  term.rs
src/termx_registry/: web.rs
src/tmpl/: mod.rs
static/: script.js
static/css/: styles.css
