[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
color-eyre = "0.6.2"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_dhall = "0.12.1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.1"
estimated_read_time = "1.0.0"
futures = "0.3"
sitemap = "0.4"
axum-macros = "0.3"
cf-turnstile = { default-features = false, features = ["native"], version = "0.1" }

# workspace dependencies
site_types = { path = "./lib/site_types" }
site_templates = { path = "./lib/site_templates" }
markdown_render = { path = "./lib/markdown_render" }
termx = { path ="./lib/termx" }

thiserror = "1.0.51"
tracing = "0.1.40"
http = "1.0.0"
toml = "0.8.8"
lazy_static = "1.4.0"
uuid = "1.6.1"
syntect = "5.1.0"
prometheus = "0.13.3"

[build-dependencies]
log = "0.4.20"
ructe = { version = "0.17", features = [ "mime03" ] }

[dependencies.tower]
version = "0.4"
features = [ "full" ]

[dependencies.tower-http]
version = "0.4"
features = [ "full" ]

[dependencies.maud]
git = "https://github.com/Xe/maud"
rev = "a40596c42c7603cc4610bbeddea04c4bd8b312d9"
features = ["axum"]
